--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
+
+<app-header></app-header>
+
 <h1>
   {{title}}!
 </h1>
 <ul>
   <li>{{curso}}</li>
-  <li>Nombre: {{nombre}}</li>  
+  <li>Nombre: {{nombre}}</li>
 </ul>
