--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 
 <app-header></app-header>
 
-<h1>
-  {{title}}!
-</h1>
-<ul>
-  <li>{{curso}}</li>
-  <li>Nombre: {{nombre}}</li>
-</ul>
+<div class="container">
+  <h1>
+    {{title}}!
+  </h1>
+  <ul>
+    <li>{{curso}}</li>
+    <li>Nombre: {{nombre}}</li>
+  </ul>
+</div>
+
+<app-footer></app-footer>
