--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,7 @@
   <h1>
     {{title}}!
   </h1>
-  <ul>
-    <li>{{curso}}</li>
-    <li>Nombre: {{nombre}}</li>
-  </ul>
+  <app-clientes></app-clientes>
 </div>
 
 <app-footer></app-footer>
