i created the views to create a new "Cliente" also i implemented the get and post methods to access the back-end

--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -3,6 +3,10 @@
   <div class="card-body text-dark">
     <h5 class="card-title">Lista de clientes</h5>
 
+  <div class="my-2 text-left">
+    <botton class="btn btn-rounded btn-primary" type="button" [routerLink] = "['/clientes/form']">Crear Cliente</botton>
+  </div>
+  
   <table class="table table-bordered table-striped">
     <thead>
       <tr>
