--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -7,7 +7,11 @@
     <botton class="btn btn-rounded btn-primary" type="button" [routerLink] = "['/clientes/form']">Crear Cliente</botton>
   </div>
 
-  <table class="table table-bordered table-striped">
+  <div class="alert alert-info" *ngIf="clientes?.length == 0">
+    No hay registros en la base de datos
+  </div>
+
+  <table class="table table-bordered table-striped" *ngIf="clientes?.length>0">
     <thead>
       <tr>
         <th>id</th>
