--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -3,43 +3,43 @@
   <div class="card-body text-dark">
     <h5 class="card-title">Lista de clientes</h5>
 
-  <div class="my-2 text-left">
-    <botton class="btn btn-rounded btn-primary" type="button" [routerLink] = "['/clientes/form']">Crear Cliente</botton>
-  </div>
+    <div class="my-2 text-left">
+      <botton class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">Crear Cliente</botton>
+    </div>
 
-  <div class="alert alert-info" *ngIf="clientes?.length == 0">
-    No hay registros en la base de datos
-  </div>
+    <div class="alert alert-info" *ngIf="clientes?.length == 0">
+      No hay registros en la base de datos
+    </div>
 
-  <table class="table table-bordered table-striped" *ngIf="clientes?.length>0">
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>nombre</th>
-        <th>apellido</th>
-        <th>email</th>
-        <th>fecha</th>
-        <th>editar</th>
-        <th>eliminar</th>
-      </tr>
-    </thead>
-  <tbody>
-    <tr *ngFor="let cliente of clientes">
-      <td>{{cliente.id}}</td>
-      <td>{{cliente.nombre}}</td>
-      <td>{{cliente.apellido}}</td>
-      <td>{{cliente.email}}</td>
-      <td>{{cliente.fecha}}</td>
+    <table class="table table-bordered table-striped" *ngIf="clientes?.length>0">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>nombre</th>
+          <th>apellido</th>
+          <th>email</th>
+          <th>fecha</th>
+          <th>editar</th>
+          <th>eliminar</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let cliente of clientes">
+          <td>{{cliente.id}}</td>
+          <td>{{cliente.nombre}}</td>
+          <td>{{cliente.apellido}}</td>
+          <td>{{cliente.email}}</td>
+          <td>{{cliente.fecha}}</td>
 
-      <td>
-        <button type="button" name="editar" [routerLink]= "['/clientes/form', cliente.id]" class="btn btn-primary">Editar</button>
-      </td>
-      <td>
-        <button type="button" name="eliminar" (click)='delete(cliente)' class="btn btn-danger">Eliminar</button>
-      </td>
-    </tr>
-  </tbody>
-  </table>
-
+          <td>
+            <button type="button" name="editar" [routerLink]="['/clientes/form', cliente.id]" class="btn btn-primary">Editar</button>
+          </td>
+          <td>
+            <button type="button" name="eliminar" (click)='delete(cliente)' class="btn btn-danger">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <nav-paginator *ngIf="paginador" [navPaginador] = "paginador"></nav-paginator>
   </div>
 </div>
