--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -55,6 +55,15 @@
       </div>
 
       <div class="form-group row">
+        <label for="fecha" class="col-form-label col-sm-2">Fecha</label>
+        <div class="col-sm-6">
+          <input [matDatepicker]="miDatepicker" class="form-control" [(ngModel)]="cliente.fecha" name="fecha" style="display:inline; width:300px;">
+          <mat-datepicker-toggle [for]="miDatepicker"></mat-datepicker-toggle>
+          <mat-datepicker #miDatepicker></mat-datepicker>
+        </div>
+      </div>
+
+      <div class="form-group row">
         <div class="col-sm-6">
           <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!cliente.id else elseBlock" [disabled]="!clienteForm.form.valid">Crear</button>
 
