--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,3 +1,5 @@
+<ver-foto *ngIf="clienteSeleccionado" [cliente]="clienteSeleccionado"></ver-foto>
+
 <div class="card border-dark mb-3">
   <div class="card-header">Clientes</div>
   <div class="card-body text-dark">
@@ -14,7 +16,7 @@
     <table class="table table-bordered table-striped" *ngIf="clientes?.length>0">
       <thead>
         <tr>
-          <th>id</th>
+          <th>perfil</th>
           <th>nombre</th>
           <th>apellido</th>
           <th>email</th>
@@ -25,7 +27,10 @@
       </thead>
       <tbody>
         <tr *ngFor="let cliente of clientes">
-          <td><button type="button"  [routerLink]="['/clientes/ver', cliente.id]" class="btn btn-success btn-sm">{{ cliente.id }}</button></td>
+          <td>
+            <img (click)="abrirModal(cliente)" *ngIf="cliente?.foto" src="http://localhost:8090/api/uploads/img/{{cliente.foto}}" alt="{{cliente.foto}}" class="img-thumbnail rounded" style="width:64px; cursor: pointer;">
+            <img (click)="abrirModal(cliente)" *ngIf="!cliente?.foto " src="http://localhost:8090/images/predefineUser.png" alt="Sin foto" class="img-thumbnail rounded" style="width:64px; cursor: pointer;">
+          </td>
           <td>{{cliente.nombre}}</td>
           <td>{{cliente.apellido}}</td>
           <td>{{cliente.email}}</td>
@@ -40,6 +45,6 @@
         </tr>
       </tbody>
     </table>
-    <nav-paginator *ngIf="paginador" [navPaginador] = "paginador"></nav-paginator>
+    <nav-paginator *ngIf="paginador" [navPaginador]="paginador"></nav-paginator>
   </div>
 </div>
