--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,27 +15,17 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink='/clientes'>Clientes </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="navbar-nav navbar-right">
+      <li *ngIf="!authService.isAuthenticated()"><a [routerLink]="['/login']" class="btn btn-outline-primary">Sing in</a></li>
+
+      <!--- <li *ngIf="authService.isAuthenticated()" (click)="logout()" class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+          Sing out: {{authService.usuario.nombre}}
+        </a>
+      </li>
+    --->
+    <button *ngIf="authService.isAuthenticated()" (click)="logout()" type="button" class="btn btn-dark">Sing out: {{authService.usuario.username}}</button>
+    </ul>
   </div>
 </nav>
