--- a/src/app/clientes/ver-foto/ver-foto.component.html
+++ b/src/app/clientes/ver-foto/ver-foto.component.html
@@ -1,4 +1,4 @@
-<div class="abrir-modal" *ngIf="modalService.modal" >
+<div class="abrir-modal" *ngIf="modalService.modal">
   <div class="modal" tabindex="-1" style="display:block;">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -36,10 +36,43 @@
               </div>
             </div>
 
+            <div class="row" *ngIf="authService.hasRole('ROLE_ADMIN')">
+              <button type="button" class="btn btn-success btn-sm" [routerLink]="['/facturas/form', cliente.id]">crear factura</button>
+            </div>
+            <div class="row">
+
+              <div class="alert alert-info my-4" *ngIf="cliente.facturas.length == 0">
+                No hay facturas asignadas para el cliente {{cliente.nombre}} {{cliente.apellido}}
+              </div>
+
+              <table class="table table-bordered table-striped my-4" *ngIf="cliente.facturas.length > 0">
+                <thead>
+                  <tr>
+                    <th>folio</th>
+                    <th>descripción</th>
+                    <th>fecha</th>
+                    <th>total</th>
+                    <th>detalle</th>
+                    <th *ngIf="authService.hasRole('ROLE_ADMIN')">eliminar</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let factura of cliente.facturas">
+                    <td>{{factura.id}}</td>
+                    <td>{{factura.descripcion}}</td>
+                    <td>{{factura.createAt}}</td>
+                    <td>{{factura.total}}</td>
+                    <td><button class="btn btn-primary btn-sm" type="button" [routerLink]="['/facturas', factura.id]">ver</button></td>
+                    <td *ngIf="authService.hasRole('ROLE_ADMIN')"><button class="btn btn-danger btn-sm" type="button" (click)="delete(factura)">eliminar</button></td>
+                  </tr>
+                </tbody>
+              </table>
+
+            </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button (click)="cerrarModal()" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button (click)="cerrarModal()" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
